# flipper-connector

./: .dockerignore  .gitignore  AUTO_CRACK_GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PROSPECTOR_SETUP.md  README.md  README_APP_LAUNCHING.txt  WEEK0_FINDINGS.md  WEEK1.5_SUMMARY.md  docker-compose.yml  justfile  run-agent.sh  test-prospector-connection.sh  test_mifare_cracking.py  test_mifare_workflow.py  test_nfc_clone.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/flipper-agent/: Cargo.toml
apps/flipper-agent/src/: main.rs
apps/nfc-test/: Cargo.toml
apps/nfc-test/src/: main.rs
crates/flipper-core/: Cargo.toml
crates/flipper-core/src/: audit.rs  connector.rs  error.rs  lib.rs  logging.rs  metrics.rs  tools.rs
crates/flipper-core/tests/: integration_test.rs
crates/flipper-protocol/: Cargo.toml
crates/flipper-protocol/src/: client.rs  connection.rs  desktop.rs  error.rs  lib.rs  traits.rs
crates/flipper-tools/: Cargo.toml
crates/flipper-tools/src/: app_management.rs  audio_operations.rs  audit_operations.rs  badusb_operations.rs  batch_operations.rs  ble_advanced_operations.rs  bluetooth_operations.rs  clone_operations.rs  crypto_operations.rs  device_info.rs  dir_operations.rs  display_operations.rs  file_operations.rs  firmware_operations.rs  gpio_operations.rs  hello_world.rs  ibutton_operations.rs  infrared_operations.rs  lib.rs  network_operations.rs  nfc_operations.rs  power_operations.rs  protocol_db_operations.rs  rfid_operations.rs  script_operations.rs  search_operations.rs  storage_operations.rs  subghz_operations.rs  system_operations.rs  u2f_operations.rs  zigbee_operations.rs
docs/: audit-logging.md  badusb-file-format.md  bluetooth-operations.md  deployment.md  gpio-operations.md  ibutton-file-format.md  infrared-file-format.md  nfc-file-format.md  rfid-file-format.md  subghz-file-format.md  tool-usage-guide.md  week2-summary.md  week3-summary.md  week4-summary.md
docs/archive/: IMPORTANT_APP_LAUNCHING_BEHAVIOR.md  PHASE1_WEEK1_SUMMARY.md  PRD.md  README.md  WEEK0_SUMMARY.md  WEEK1.5_FINDINGS.md
spike/: Cargo.toml  app_research.rs  check_firmware.rs  demo_app_launch.rs  explore_apps.rs  force_cleanup.rs  list_apps.rs  list_subghz_files.rs.bak  read_nfc_examples.rs  read_nfc_files.rs  read_rfid_examples.rs  read_rfid_sub_files.rs  test_app_management.rs  test_app_state.rs  test_batch_read.rs  test_builtin_apps.rs  test_button_back.rs  test_gui_input.rs  test_gui_navigation.rs  test_load_file.rs  test_nfc_read.rs  test_nfc_write.rs  test_rfid_tools.rs  test_start_args.rs  test_subghz_tools.rs  test_week2_tools.rs
spike/src/: main.rs
