[package]
name = "nfc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
flipper-core = { path = "../../crates/flipper-core" }
flipper-tools = { path = "../../crates/flipper-tools" }
flipper-protocol = { path = "../../crates/flipper-protocol" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
