[package]
name = "flipper-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and connector implementation for Flipper Zero"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Strike48 Connector SDK
strike48-connector = { workspace = true }

# Internal dependencies
flipper-protocol = { workspace = true }

[dev-dependencies]
flipper-tools = { workspace = true }
