[package]
name = "flipper-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol layer wrapping flipper-rpc for Flipper Zero communication"

[dependencies]
# Flipper Zero RPC
flipper-rpc = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }
