[package]
name = "flipper-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool implementations for Flipper Zero connector"

[dependencies]
# Internal
flipper-core = { workspace = true }
flipper-protocol = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Encoding
base64 = "0.22"
hex = "0.4"

# Date/Time
chrono = "0.4"

# Cryptography
sha2 = "0.10"
md5 = "0.7"
rand = "0.8"
crc32fast = "1.4"
